--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 :root {
-  --border-color: lightgray;
-  --text-color: rgb(76, 171, 248);
-  --rating-bg: rgb(3, 71, 110);
+  --border-color: rgb(235, 235, 235);
+  --text-color-blue: rgb(35, 133, 212);
+  --text-color-white: white;
+  --rating-bg: rgb(22, 45, 58);
 }
 
 body {
@@ -12,8 +13,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #212121;
-  color: #fefefe;
 }
 
 code {
@@ -21,28 +20,33 @@ code {
     monospace;
 }
 
-h1 {
-  color: var(--text-color);
-  border-bottom: 1px solid var(--border-color);
+h1.app-title {
+  color: var(--text-color-blue);
+  border-bottom: 2px solid var(--border-color);
   padding-bottom: 1rem;
+  margin-bottom: 2rem;
 }
 
-.container {
+.my-container {
   display: flex;
   flex-flow: column;
   padding: 0 4rem;
-  max-width: 80%;
+  max-width: 800px;
 }
 
 .reviews {
-  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  margin-top: 2rem;
 }
 
 .review-item {
-  border: 1px solid var(--border-color);
-  margin: 2rem 0;
+  display: flex;
+  flex-direction: row wrap;
+  border: 2px solid var(--border-color);
   border-radius: 6px;
-  padding: 0 1rem;
+  padding: 1.8rem;
 }
 
 .review-item .rating {
@@ -54,9 +58,23 @@ h1 {
   width: 32px;
   border: 1px solid var(--border-color);
   border-radius: 50%;
-  color: var(--text-color);
+  color: var(--text-color-white);
   background-color: var(--rating-bg);
+  font-size: 14px;
+  margin-right: 1rem;
 }
 .review-item .comment {
-  color: var(--text-color);
+  color: var(--text-color-blue);
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 2rem;
+}
+
+input[type='text'],
+textarea {
+  padding: 1rem;
 }
